--- a/React JS Defense - 15 July 2018/Free Gems Catalog/src/sass/mixins.scss
+++ b/React JS Defense - 15 July 2018/Free Gems Catalog/src/sass/mixins.scss
@@ -2,7 +2,7 @@
 @mixin h2 {
     font-weight: bold; 
     color: #158CBA; 
-    margin: 2% 0; 
+    padding: 1% 0; 
     text-shadow: 1px 1px rgb(0,0,0);
 }
 
