--- a/React JS Defense - 15 July 2018/Free Gems Catalog/src/sass/animations.scss
+++ b/React JS Defense - 15 July 2018/Free Gems Catalog/src/sass/animations.scss
@@ -28,6 +28,13 @@
     100% { opacity: 1;}
 }
 
+//Jewel model
+@keyframes button-view {
+    0% { opacity: 0; transform: translate(0px, 0px); }
+    50% { opacity: 0.5; transform: translate(0px, 100px); }
+    100% { opacity: 1; transform: translate(0px, 200px); }
+}
+
 @keyframes linksHoverRotate {
     0% {  }
     100% { transform: perspective(10rem) rotateX(30deg); }
