--- a/React JS Defense - 15 July 2018/Free Gems Catalog/src/components/Jewels/JewelsListSection/JewelsListSection.scss
+++ b/React JS Defense - 15 July 2018/Free Gems Catalog/src/components/Jewels/JewelsListSection/JewelsListSection.scss
@@ -1,7 +1,12 @@
 @import '../../../sass//mixins';
 @import '../../../sass/animations';
 
-#allJewels {
-    padding: 2%;
+#JewelsSection {
+    background-image: url('../../../image/gemstone-crystal.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding-bottom: 2%;
     & > h2 { @include h2; }
+
+
 }
