--- a/React JS Defense - 15 July 2018/Free Gems Catalog/src/components/Gems/SearchGems/SearchGems.scss
+++ b/React JS Defense - 15 July 2018/Free Gems Catalog/src/components/Gems/SearchGems/SearchGems.scss
@@ -1,4 +1,15 @@
+@import '../../../sass//mixins';
+@import '../../../sass/animations';
+
 .searchGems {
+    background: rgba(255,255,255, 0.3);
+    padding: 2%;
+    -webkit-box-shadow: 0px 0px 28px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 28px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 28px 0px rgba(0,0,0,0.75);
+    padding: 2%;
+    border: 2px solid rgb(21,140,186);
+    border-radius: 0.5rem;
     width: 25rem;
     margin: 0 auto;
     margin-bottom: 2%;
@@ -8,9 +19,11 @@
             background: none;
             outline: none;
             padding: 0.3rem 0 0.3rem 1rem;
-            border: 2px solid #fff;
+            border: 2px solid #158CBA;
             border-bottom-left-radius: 0.3rem;
             border-top-left-radius: 0.3rem;
+            color: #158CBA;
+            margin-right: 0.3rem;
             &::-webkit-input-placeholder { color: #fff; }
 
             &:focus {
@@ -21,31 +34,30 @@
 
              //focus placeholder for Chrome
              &:focus,
-             &:focus::-webkit-input-placeholder { border-color: #158CBA; color: #158CBA; }
+             &:focus::-webkit-input-placeholder { border-color: #158CBA; color: #158CBA; background: #fff; }
 
              //focus placeholder for FireFox 19+
              &:focus,
-             &:focus::-moz-placeholder { border-color: #158CBA; color: #158CBA; }
+             &:focus::-moz-placeholder { border-color: #158CBA; color: #158CBA; background: #fff; }
 
              //focus placeholder for FireFox 18-
              &:focus,
-             &:focus:-moz-placeholder { border-color: #158CBA; color: #158CBA; }
+             &:focus:-moz-placeholder { border-color: #158CBA; color: #158CBA; background: #fff; }
 
              //focus placeholder for Internet Explorer
              &:focus,
-             &:focus:-ms-input-placeholder { border-color: #158CBA; color: #158CBA; }
+             &:focus:-ms-input-placeholder { border-color: #158CBA; color: #158CBA; background: #fff; }
         }
 
         & > button {
             cursor: pointer;
-            //border: 2px solid rgb(21,140,186);
             outline: none;
             border: none;
             color: #fff;
             background: rgb(21,140,186);
             border: 2px solid rgb(21,140,186);
             font-weight: bold;
-            padding: 0.3rem 1rem;
+            padding: 0.35rem 1rem;
             border-bottom-right-radius: 0.3rem;
             border-top-right-radius: 0.3rem;
             &:hover {
