--- a/React JS Defense - 15 July 2018/Free Gems Catalog/src/sass/animations.scss
+++ b/React JS Defense - 15 July 2018/Free Gems Catalog/src/sass/animations.scss
@@ -15,6 +15,13 @@
     100% { transform: rotateY(0deg); }
 }
 
+//Sign In
+@keyframes visibleForm {
+    0% { opacity: 0 }
+    100% { opacity: 1; }
+}
+
+
 //Gem model
 @keyframes button-view {
     0% { opacity: 0; transform: translate(0px, 0px); }
