--- a/React JS Defense - 15 July 2018/Free Gems Catalog/src/sass/mixins.scss
+++ b/React JS Defense - 15 July 2018/Free Gems Catalog/src/sass/mixins.scss
@@ -1,7 +1,7 @@
 
 @mixin h2 {
     font-weight: bold; 
-    color: #158CBA; 
+    color: #FFF; 
     padding: 1% 0; 
     text-shadow: 1px 1px rgb(0,0,0);
 }
@@ -11,7 +11,6 @@
     position: relative;
     display: block;
     width: $mainWidth;
-    position: relative;
     text-decoration: none;  
     border: none;            
     background: #CFE7F1;
@@ -23,6 +22,24 @@
     &:hover {
         background: rgb(21,140,186);
         color: #CFE7F1;
+        border: 2px solid #CFE7F1;
+    }
+}
+
+@mixin edit-button {
+    cursor: pointer;
+    text-decoration: none;
+    outline: none;
+    border: none;
+    border-radius: 0.2rem;
+    padding: 0.3rem 1rem;
+    background: goldenrod;
+    color: #fff;
+    font-weight: bold;
+    margin-right: 0.7rem;
+    &:hover {
+        background: #fff;
+        color: goldenrod;
     }
 }
 
@@ -55,7 +72,6 @@
         box-shadow: 0px 0px 23px 0px rgba(0,0,0,0.95);
     }
 }
-
 
 @mixin pagination {
     width: 30%;
