--- a/React JS Defense - 15 July 2018/Free Gems Catalog/src/components/AdminOptions/UsersTable.scss
+++ b/React JS Defense - 15 July 2018/Free Gems Catalog/src/components/AdminOptions/UsersTable.scss
@@ -15,7 +15,7 @@
        @include edit-button;
     }
 
-    & > tbody > tr > td > #delete-user {
+    & > tbody > tr > td > .delete-user {
         cursor: pointer;
         outline: none;
         border: none;
