--- a/React JS Defense - 15 July 2018/Free Gems Catalog/src/components/Gems/GemsListSection/GemsListSection.scss
+++ b/React JS Defense - 15 July 2018/Free Gems Catalog/src/components/Gems/GemsListSection/GemsListSection.scss
@@ -1,7 +1,7 @@
 @import '../../../sass//mixins';
 @import '../../../sass/animations';
 
-#gemsSection {
+.gemsSection {
     background-image: url('../../../image/gemstone-crystal.jpg');
     background-size: cover;
     background-repeat: no-repeat;
