--- a/React JS Defense - 15 July 2018/Free Gems Catalog/src/sass/animations.scss
+++ b/React JS Defense - 15 July 2018/Free Gems Catalog/src/sass/animations.scss
@@ -35,6 +35,13 @@
     100% { opacity: 1;}
 }
 
+//Gemd Details
+@keyframes visible {
+    0% { opacity: 0; }
+    50% { opacity: 0.5; }
+    100% { opacity: 1; }
+}
+
 //Jewel model
 @keyframes button-view {
     0% { opacity: 0; transform: translate(0px, 0px); }
