--- a/React JS Defense - 15 July 2018/Free Gems Catalog/src/components/Gems/GemsListSection/GemsList.scss
+++ b/React JS Defense - 15 July 2018/Free Gems Catalog/src/components/Gems/GemsListSection/GemsList.scss
@@ -20,7 +20,7 @@
 
     }
 
-    & > #page-numbers {
+    & > .page-numbers {
         width: 15rem;
         margin: 2% auto;
         & > ul {
@@ -55,7 +55,7 @@
             margin-bottom: 3%;
         }    
 
-        & > #page-numbers { 
+        & > .page-numbers { 
             width: 50%; 
             & > ul {
                 margin: 0;
@@ -68,12 +68,12 @@
 }
 
 @media screen and (max-width: 400px) {
-    .inner-gems { & > #page-numbers { width: 20%; } }
+    .inner-gems { & > .page-numbers { width: 20%; } }
 }
 
 @media screen and (max-width: 350px) {
     .inner-gems { 
-        & > #page-numbers { 
+        & > .page-numbers { 
             width: 10%; 
             margin: 2% auto;
             & > ul { 
