--- a/React JS Defense - 15 July 2018/Free Gems Catalog/src/components/Gems/SearchGems/SearchGems.scss
+++ b/React JS Defense - 15 July 2018/Free Gems Catalog/src/components/Gems/SearchGems/SearchGems.scss
@@ -2,7 +2,6 @@
 @import '../../../sass/animations';
 
 .searchGems {
-    background: rgba(255,255,255, 0.3);
     padding: 2%;
     -webkit-box-shadow: 0px 0px 28px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 0px 28px 0px rgba(0,0,0,0.75);
@@ -19,7 +18,7 @@
             background: none;
             outline: none;
             padding: 0.3rem 0 0.3rem 1rem;
-            border: 2px solid #158CBA;
+            border: 1px solid #158CBA;
             border-bottom-left-radius: 0.3rem;
             border-top-left-radius: 0.3rem;
             color: #158CBA;
@@ -55,7 +54,7 @@
             border: none;
             color: #fff;
             background: rgb(21,140,186);
-            border: 2px solid rgb(21,140,186);
+            border: 1px solid #fff;
             font-weight: bold;
             padding: 0.35rem 1rem;
             border-bottom-right-radius: 0.3rem;
