--- a/React JS Defense - 15 July 2018/Free Gems Catalog/src/sass/mixins.scss
+++ b/React JS Defense - 15 July 2018/Free Gems Catalog/src/sass/mixins.scss
@@ -128,7 +128,6 @@
     -webkit-box-shadow: 0px 0px 28px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 0px 28px 0px rgba(0,0,0,0.75);
     box-shadow: 0px 0px 28px 0px rgba(0,0,0,0.75);
-    overflow: hidden;
 }
 
 @mixin label {
@@ -164,6 +163,20 @@
      //focus placeholder for Internet Explorer
      &:focus,
      &:focus:-ms-input-placeholder { border-color: #158CBA; color: #158CBA; }
+}
+
+@mixin image-View {
+    background: rgba(21,140,186, 0.7);
+    background: radial-gradient(circle, rgba(255,255,255,0.5) 12%, rgba(21,140,186,0.5) 65%);
+    width: 40%;
+}
+
+@mixin create-form {
+    background: rgba(21,140,186, 0.7);
+    background: radial-gradient(circle, rgba(255,255,255,0.5) 12%, rgba(21,140,186,0.5) 65%);
+    width: 60%;
+    border-left: 2px solid rgb(21,140,186);
+    padding: 5% 2% 5% 5%;
 }
 
 @mixin model {
