Added MyRoom Page.

--- a/React JS Defense - 15 July 2018/Free Gems Catalog/src/components/MyRoom/Model/MyJewel.scss
+++ b/React JS Defense - 15 July 2018/Free Gems Catalog/src/components/MyRoom/Model/MyJewel.scss
@@ -1,7 +1,7 @@
 @import '../../../sass//mixins';
 @import '../../../sass/animations';
 
-.publicJewel {
+.myJewel {
     @include model;
     width: 17rem;
     margin: 3%;
