--- a/React JS Defense - 15 July 2018/Free Gems Catalog/src/components/AdminOptions/UsersTable.scss
+++ b/React JS Defense - 15 July 2018/Free Gems Catalog/src/components/AdminOptions/UsersTable.scss
@@ -6,28 +6,26 @@
     cursor: pointer;
     margin: 0 auto;
 
-    // & tr {
-    //     display: flex;
-    //     justify-content: space-between;
-    // }
-
     & > tbody > tr > td > .edit-user {
        @include edit-button;
+       margin-right: 0.7rem;
     }
 
     & > tbody > tr > td > .delete-user {
         cursor: pointer;
         outline: none;
-        border: none;
-        border-radius: 0.2rem;
+        border: 1px solid #fff;
+        border-radius: 0.3rem;
         padding: 0.3rem 1rem;
         background: #F73F34;
         color: #fff;
         font-weight: bold;
         margin-right: 0.7rem;
+        text-shadow: 1px 1px rgb(0,0,0);
         &:hover {
             background: #fff;
             color: #F73F34;
+            border-color: #F73F34;
         }
     }
 
