--- a/React JS Defense - 15 July 2018/Free Gems Catalog/src/components/MyRoom/MyRoom.scss
+++ b/React JS Defense - 15 July 2018/Free Gems Catalog/src/components/MyRoom/MyRoom.scss
@@ -1,7 +1,22 @@
 @import '../../sass/mixins';
 @import '../../sass/animations';
 
-#myRoom {
-    padding: 2%;
-    & > h2 { @include h2; }
+.myRoom {
+    background-image: url('../../image/gemstone-crystal.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding: 1% 0;
+    & > h2 { @include h2; padding-bottom: 0; }
+
+    & > .inner-myRoom {
+        @include inner-template;
+        width: 90%;
+        margin: 1% auto;
+        -webkit-box-shadow: 0px 0px 28px 0px rgba(0,0,0,0.75);
+        -moz-box-shadow: 0px 0px 28px 0px rgba(0,0,0,0.75);
+        box-shadow: 0px 0px 28px 0px rgba(0,0,0,0.75);
+        padding: 2%;
+        border: 2px solid rgb(21,140,186);
+        border-radius: 0.5rem;
+    }
 }
