--- a/React JS Defense - 15 July 2018/Free Gems Catalog/src/components/PublicJewels/EditPublicJewel/EditPublicJewel.scss
+++ b/React JS Defense - 15 July 2018/Free Gems Catalog/src/components/PublicJewels/EditPublicJewel/EditPublicJewel.scss
@@ -5,7 +5,7 @@
     background-image: url('../../../image/gemstone-crystal.jpg');
     background-size: cover;
     background-repeat: no-repeat;
-    padding: 2% 0;
+    padding: 1% 0;
     & > h2 { @include h2; padding-bottom: 0; }
     & > h4 { @include h3; }
 
@@ -15,11 +15,13 @@
         background: radial-gradient(circle, rgba(255,255,255,1) 12%, rgba(218,165,32,0.4) 65%);
         border: 2px solid goldenrod;
         width: 63rem;
+        height: 470px;
 
         & > .image-view {
             & > h3 {  @include h3; margin-top: 50%; color: goldenrod; }
             width: 40%;
-            & > img { width: 100%; height: 496px; }
+            overflow: hidden;
+            & > img { width: 100%; height: 468px; }
         }
 
         & > .edit-publicJewel-form {
@@ -54,4 +56,83 @@
             }
         }
     }
+}
+
+@media screen and (max-width: 1100px) {
+    .edit-publicJewel {
+        & > .inner-edit-publicJewel {
+            width: 92%;
+        }
+    }
+}
+
+@media screen and (max-width: 890px) {
+    .edit-publicJewel {
+        & > .inner-edit-publicJewel { 
+            height: 700px;           
+            & > .image-view { 
+                width: 50%;
+                height: 100%; 
+                & > img { height: inherit;}
+            }
+            & > .edit-publicJewel-form {
+                width: 50%;
+                height: 100%;
+                & > h3 { padding-bottom: 0; }
+                & > form > .row { 
+                    flex-direction: column; 
+                    & > span {
+                        width: 60%;
+                        margin: 2% auto;
+                    }
+
+                    & > button { 
+                        width: 5rem; 
+                        margin-right: 0;
+                        margin: 0 auto; 
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 750px) {
+    .edit-publicJewel {
+        & > h2 { font-size: 30px; }
+        & > h4 { font-size: 20px; }
+        & > .inner-edit-publicJewel { 
+            height: 100%; 
+            flex-direction: column; 
+            margin-top: 5%;         
+            & > .image-view { 
+                width: 100%;
+                height: 100%; 
+                & > img { height: inherit;}
+            }
+            & > .edit-publicJewel-form {
+                width: 100%;
+                height: auto;
+                border-left: unset;
+                border-top: 2px solid goldenrod;
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .edit-publicJewel {
+        & > .inner-edit-publicJewel { 
+            & > .edit-publicJewel-form {
+                & > form > .row { 
+                   width: 100%; 
+                   & > span { width: 70%; }
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 300px) {
+    .edit-publicJewel > .inner-edit-publicJewel > .edit-publicJewel-form > form > .row > span { width: 90%; }
 }
