--- a/React JS Defense - 15 July 2018/Free Gems Catalog/src/components/MyRoom/MyRoom.scss
+++ b/React JS Defense - 15 July 2018/Free Gems Catalog/src/components/MyRoom/MyRoom.scss
@@ -6,7 +6,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     padding: 1% 0;
-    & > h2 { @include h2; padding-bottom: 0; }
+    & > h2 { @include h2; }
 
     & > .inner-myRoom {
         @include inner-template;
